add OpenRewrite
Update to Java 21 using recipe.